--- a/DoctorWPF/MainWindow.xaml
+++ b/DoctorWPF/MainWindow.xaml
@@ -8,6 +8,7 @@
         Title="Login" Height="400" Width="500">
     <Grid>
       <Button Content="Login" Height="23" HorizontalAlignment="Left" Margin="118,211,0,0" Name="button5" VerticalAlignment="Top" Width="104" Click="button5_Click" />
+      <Button Content="Login" Height="23" HorizontalAlignment="Left" Margin="118,211,0,0" Name="button5" VerticalAlignment="Top" Width="104" Click="button5_Click" />
 
     </Grid>
 
