--- a/DoctorWPF/Doctor.Context.tt
+++ b/DoctorWPF/Doctor.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"DoctorDB.edmx";
+const string inputFile = @"Doctor.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
