--- a/DoctorWPF/Login.xaml
+++ b/DoctorWPF/Login.xaml
@@ -36,11 +36,11 @@
 
         <TextBlock Height="23" HorizontalAlignment="Left" Margin="58,168,0,0" Name="textBlock2" Text="Password" VerticalAlignment="Top" Width="77" />
 
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="118,115,0,0" Name="textBoxEmail" VerticalAlignment="Top" Width="247" Text="sanaz@yahoo.com" />
+        <TextBox Height="23" HorizontalAlignment="Left" Margin="118,115,0,0" Name="textBoxEmail" VerticalAlignment="Top" Width="247" Text="sanaz@yahoo.com" TextChanged="textBoxEmail_TextChanged" />
 
         <PasswordBox Height="23" HorizontalAlignment="Left" Margin="118,168,0,0" Name="passwordBox1" VerticalAlignment="Top" Width="247" Password="sde123" />
 
-        <Button Content="Login" Height="23" HorizontalAlignment="Left" Margin="118,211,0,0" Name="Loginbutton" VerticalAlignment="Top" Width="104" Click="button1_Click" />
+        <Button Content="Login" Height="23" HorizontalAlignment="Left" Margin="118,211,0,0" Name="Loginbutton" VerticalAlignment="Top" Width="104" Click="Loginbutton_Click" />
 
         <TextBlock Height="23" HorizontalAlignment="Left" x:Name ="emailerrormessage" VerticalAlignment="Top" Width="247" Margin="118,253,0,0"  OpacityMask="Crimson" Foreground="#FFE5572C"  />
         <TextBlock Height="23" HorizontalAlignment="Left" x:Name ="passworderrormessage" VerticalAlignment="Top" Width="247" Margin="118,253,0,0"  OpacityMask="Crimson" Foreground="#FFE5572C"  />
